--- a/test1.css
+++ b/test1.css
@@ -23,7 +23,7 @@ h1 {
   top: 0px;
   left: 0px;
   height: 5px;
-  width: 48%; /* 0~100% */
+  width: 48%; /* 0~100%dd */
   background-color: aqua;
 }
 .loading {
